--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "commitizen": "^4.3.0",
+    "cz-customizable": "^7.0.0",
     "husky": "^9.0.11",
     "pinst": "^3.0.0"
   },
@@ -14,7 +15,10 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/cz-customizable"
+    },
+    "cz-customizable": {
+      "config": ".cz-config.cjs"
     }
   }
 }
