.env.exampleとaituber.pyに変更を追加

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ OBS_WS_PORT=4455
 OBS_WS_PASSWORD=secret
 
 OPENAI_API_KEY=sk-xxxxxx
+OUTPUT_DEVICE_NAME=VoiceMeeter Input (VB-Audio VoiceMeeter VAIO)
+VIDEO_ID=video_id
